# weird-grep

./: CMakeLists.txt  README.md  main.cpp
include/: grep.h  threadpool.h
src/: grep.cpp  threadpool.cpp
tests/: CMakeLists.txt  testfile.txt  threadpool_tests.cpp
tests/testfiles/: somefile.txt
